[package]
name = "loc8addr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bdk = {version="^0.27.1", default-features = false, features = ["all-keys", "key-value-db", "rpc"]}
dirs-next = "2.0"
slip132 = "^0.10.0"
clap = { version = "4.0", features = ["derive"]}
